tp4/css/sections/articles.css
.homepageGrid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: var(--space-lg);
  padding-block: var(--space-3xl);
}

.homepageGrid_actions {
  display: flex;
  align-items: center;
  gap: var(--space-xs);
  /* padding-bottom: var(--space-xs);  */
}

/* ++++++ */

.homepageGrid__title {
  font-family: var(--font-sans);
  text-transform: uppercase;
  line-height: 1;
  font-size: var(--text-4xl);
}

.homepageGrid_left_body {
  grid-column: 1 / span 8;
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  gap: var(--space-lg);
  border-top: 1px solid var(--color-secondary-foreground);
  margin-inline: calc(var(--space-xl) * -1);
  padding-inline: var(--space-xl);
  padding-top: var(--space-xs);
}

.homepageGrid_left_body__description {
  grid-column: 5 / span 3;
}

.homepageGrid_left_body__description p {
  font-size: var(--text-sm);
  padding-top: 0;
}

.homepageGrid_right__title {
  line-height: 1.3;
  font-size: var(--text-sm);
  font-weight: 400;
  text-wrap: pretty;
}

/*  */

.homepageGrid_left__img {
  object-fit: cover;
  aspect-ratio: 1 / 1;
  height: auto;
}

.homepageGrid-item {
  position: relative;
  display: flex;
  flex-flow: column wrap;
  justify-content: flex-end;
  gap: var(--space-xs);
}

.homepageGrid-item__wrapper {
  display: flex;
  flex-direction: column;
  gap: var(--space-xs);
}

.homepageGrid_left__item-title {
  font-size: var(--text-base);
  font-weight: 400;
}

.homepageGrid_left__item-title a {
  text-decoration: none;
  color: inherit;
  font-weight: inherit;

  &::before {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  &:hover {
    background-color: var(--border-color);
  }
}

.homepageGrid_left__item-taxonomy {
  font-size: var(--text-xs);
  font-family: var(--font-mono);
  color: var(--color-secondary-foreground);
}

